<?xml version="1.0"?>
<package>
    <name>depth_sensors</name>
    <version>0.1.0</version>
    <description>
        URDF and meshes describing the Kinect V2 and Senz3d depth sensors.
    </description>

    <maintainer email="mfernandezcarmona@lincoln.ac.uk">
        Manuel Fernandez
    </maintainer>
    <license>BSD</license>
    <url type="repository">https://github.com/brml/depth_sensors</url>
    <url type="bugtracker">https://github.com/brml/depth_sensors/issues</url>
    <author>Marvin Ludersdorfer</author>

    <buildtool_depend>catkin</buildtool_depend>
    
    <run_depend>kinect2_description</run_depend>
    <run_depend>kinect_control</run_depend>
    <run_depend>kinect_description</run_depend>
    <run_depend>senz3d_description</run_depend>
    <run_depend>simple_description</run_depend>

    <export>
        <metapackage/>
    </export>

</package>
