<?xml version="1.0"?>
<package>
    <name>kinect_control</name>
    <version>0.0.1</version>
    <description>
        Publishes the state information for the Kinect stand.
    </description>

    <maintainer email="mfernandezcarmona@lincoln.ac.uk">
        Manuel Fernandez
    </maintainer>
    <license>BSD</license>
    <url type="repository">https://github.com/brml/depth_sensors</url>
    <url type="bugtracker">https://github.com/brml/depth_sensors/issues</url>
    <author>Marvin Ludersdorfer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>controller_manager</run_depend>
    
</package>