<?xml version="1.0"?>
<package>
    <name>simple_description</name>
    <version>0.0.2</version>
    <description>
        Description of a very simple color camera for debugging purposes.
        This package contains the URDF describing a simple RGB camera.
    </description>

    <maintainer email="mfernandezcarmona@lincoln.ac.uk">
        Manuel Fernandez
    </maintainer>
    <license>BSD</license>
    <url type="repository">https://github.com/brml/depth_sensors</url>
    <url type="bugtracker">https://github.com/brml/depth_sensors/issues</url>
    <author>Marvin Ludersdorfer</author>

    <buildtool_depend>catkin</buildtool_depend>

</package>